# packrat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.web  README.md  compose.yml  flake.nix  flake.nix.bk  justfile
.sqlx/: query-086485a360765be0983bd3d3d9f91450cdf2d42c7325235f3e1707abab7ef5df.json  query-08cce122c8eb9b390e5411cc08d2e735de7230a596fa2f2ba472bed6a9b4a75c.json  query-3e68ef311740d9d7174d0cc36e417d94eec813b7b7a298001178a33eab24bd7c.json  query-4f6bf19b15378864cb2066da638c9416ea04d307e52e8c8f3de10de3300009ed.json  query-52ef682b50167d5fcf2214a0b39f9b03a9eacf91ecfc18013d4772ec18b790c4.json  query-57ce374718fe524fec8a512cf166ef10b8dce47e55ff701998dd915508c9666d.json  (+7 more)
crates/packrat/: Cargo.toml
crates/packrat/src/: main.rs
crates/packrat_api/: Cargo.toml
crates/packrat_api/src/: app.rs  main.rs  state.rs  static_ui.rs
crates/packrat_api/src/dto/: assets.rs  envelope.rs  health.rs  items.rs  mod.rs  readiness.rs  tenants.rs  users.rs
crates/packrat_api/src/handlers/: assets.rs  health.rs  items.rs  mod.rs  ready.rs  tenants.rs  users.rs
crates/packrat_application/: Cargo.toml
crates/packrat_application/src/: lib.rs
crates/packrat_application/src/ports/: asset_command_port.rs  asset_query_port.rs  asset_search_query.rs  item_command_port.rs  item_query_port.rs  item_search_query.rs  mod.rs  readiness_port.rs  tenant_command_port.rs  user_command_port.rs
crates/packrat_application/src/use_cases/: get_example_item.rs  mod.rs
crates/packrat_application/src/use_cases/asset/: create_asset.rs  delete_asset.rs  get_asset.rs  list_assets.rs  list_child_assets.rs  mod.rs  search_assets.rs  update_asset.rs
crates/packrat_application/src/use_cases/health/: check_readiness.rs  mod.rs
crates/packrat_application/src/use_cases/item/: create_item.rs  delete_entity.rs  get_item.rs  list_child_items.rs  list_items.rs  mod.rs  search_items.rs  update_entity.rs
crates/packrat_application/src/use_cases/tenant/: create_tenant.rs  mod.rs
crates/packrat_application/src/use_cases/user/: create_user.rs  mod.rs
crates/packrat_domain/: Cargo.toml
crates/packrat_domain/src/: inventory.rs  item.rs  lib.rs  stock.rs
crates/packrat_domain/src/models/: bucket.rs  entity.rs  item.rs  location.rs  mod.rs  partial_entity.rs  tenant.rs  user.rs
crates/packrat_infrastructure/: Cargo.toml
crates/packrat_infrastructure/.sqlx/: query-3dc61bab300f1989eb65b1d53f8716822485511700a238f9746a34e0076421ba.json  query-7c6b010a66bf31e263c5331367bd3567bec3d60632c288f1ce07d594d7a59874.json  query-dcc2406ead2adabc140fecebb47ec277c2f1bc7b2ab0ddbe396e0f3505f54c9c.json  query-e445bc7b91bd82f34a5d72b67185dda64c01f1254d47a9d467f9dc2340bdc00e.json  query-ec5ba834a0e9f7175f7988ea110ea7a42a5d270dc04000cb2898b762833363d5.json
crates/packrat_infrastructure/migrations/: 20250425120000_create_items.sql  20250426120000_create_locations.sql  20250426120001_create_buckets.sql  20250426120002_restructure_items.sql  20250427120000_recursive_items.sql  20260425120003_schema_history_anchor.sql  20260430180551_delete_entity.sql  20260430190000_rename_items_to_assets.sql  20260505210921_roles_and_permissions.sql
crates/packrat_infrastructure/src/: lib.rs  postgres.rs  postgres_tenant.rs  postgres_user.rs  readiness.rs
docker/: docker-compose.yml
inventory.data/: inventory.data.csproj  (+1 more)
(+59 files in other folders)
