[package]
name = "packrat"
version = "0.1.0"
edition = "2024"
description = "Entrypoint: wire use cases, domain, and infrastructure."

[dependencies]
packrat_domain = { path = "../packrat_domain" }
packrat_application = { path = "../packrat_application" }
packrat_infrastructure = { path = "../packrat_infrastructure" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
