[package]
name = "packrat_infrastructure"
version = "0.1.0"
edition = "2024"
description = "Adapters: DB, HTTP, external services. Depends on domain, never the reverse."

[dependencies]
async-trait = "0.1"
packrat_domain = { path = "../packrat_domain" }
packrat_application = { path = "../packrat_application" }
sqlx = { version = "0.8", default-features = false, features = [
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
